--- a/google-reviews.css
+++ b/google-reviews.css
@@ -1,5 +1,4 @@
 .darkbg {
-    background-color: #000;
     top:0;
     left:0;
     right:0;
@@ -21,7 +20,7 @@
     width: 40px;
     height: 36px;
     transform: rotate(0deg) skewY(-35deg);
-    background: #fafafb;
+    background: #efefef;
 }
 
 .gr-review {
@@ -35,7 +34,7 @@
 }
 
 .gr-review-bubble {
-    background-color: #fafafb;
+    background-color: #efefef;
     border-radius:8px;
     position:relative;
     padding:20px;
@@ -156,7 +155,7 @@
     bottom: -2px;
     z-index: 1;
     height: 25px;
-    background: linear-gradient(rgba(250, 250, 251, 0) 0%, #fafafb 80%);
+    background: linear-gradient(rgba(250, 250, 251, 0) 0%, #efefef 80%);
 }
 
 
