--- a/google-reviews.css
+++ b/google-reviews.css
@@ -10,7 +10,7 @@
     display:flex;
     position:relative;
     border-radius:8px;
-    touch-action: none;
+    touch-action: pinch-zoom;
 }
 
 .gr-review-wrapper:after {
